adding observercommmucication component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<button (click)="sendMessage()" routerLink="/navbar">send Message</button>
+<button (click)="sendMessage()">send Message</button>
+<button (click)="clearMessage()">Clear Message</button>
 <router-outlet></router-outlet>
